syntax = "proto3";
package com.aws.protobuf;
import "google/protobuf/timestamp.proto";

option java_outer_classname = "AnalyticServiceProto";

service AnalyticService {
  rpc getPortfolioHistory (PortfolioHistoryRequest) returns (PortfolioHistoryResponse);
  rpc getPortfolioProfitability (PortfolioInstrumentsRequest) returns (PortfolioProfitabilityResponse);
}


message PortfolioHistoryRequest {
  int64 portfolio_id = 1;
  int64 lower_limit = 2;
  int64 higher_limit = 3;
}

message PortfolioHistoryResponse {
  repeated Deal deals = 1;
}

message Deal {
  enum DealType {
    BUY = 0;
    SALE = 1;
  }
  int64 deal_id = 1;
  DealType deal_type = 2;
  google.protobuf.Timestamp timestamp = 3;
  int64 instrument_id = 4;
  int64 count = 5;
  string lot_price = 6;
}

message PortfolioInstrumentsRequest {
  int64 portfolio_id = 1;
  repeated int64 instruments_id = 2;
}

message PortfolioProfitabilityResponse{
  int64 portfolio_id = 1;
  map<int64, string> mapProfitability = 2;
}

